# Subflow: Navigate to cart screen

appId: com.ennio.example

---
- back

- tapOn:
    text: 'Cart'
- assertVisible:
    id: 'cart-root'
