appId: com.ennio.maestrodemo
name: 'commands/longPressOn — long press box on Gesture Tester'
tags:
  - passing
---
- launchApp:
    clearState: true
- tapOn: 'Gesture Tester'
- longPressOn:
    id: long-press
- assertVisible: 'Long pressed!'
