appId: org.wikimedia.wikipedia
---
- launchApp:
    clearState: true
- repeat:
    times: 3
    commands:
      - swipe:
          direction: LEFT
          duration: 400
      - waitForAnimationToEnd
- tapOn: Get started
- tapOn:
    text: 'Non existent view'
    optional: true
